src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>CL_Product__c</fullName>
        <description>Used by ClickLink Rule, is not necessary for users.</description>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used by ClickLink Rule, is not necessary for users.</inlineHelpText>
        <label>CL Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY 11</fullName>
                </value>
                <value>
                    <fullName>FY 12</fullName>
                </value>
                <value>
                    <fullName>FY 13</fullName>
                </value>
                <value>
                    <fullName>FY 14</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_Schedule__c</fullName>
        <formula>Opportunity.Income_Schedule__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Income Schedule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Frequency__c</fullName>
        <formula>TEXT(Opportunity.Invoice_Frequency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-populated - comes from Oppty</inlineHelpText>
        <label>Invoice Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Unit_Price__c</fullName>
        <formula>IF (Invoice_Frequency__c = &quot;Monthly&quot;, UnitPrice/ 12, 
IF (Invoice_Frequency__c = &quot;Semi-Annually&quot;,UnitPrice/ 2, 
IF (Invoice_Frequency__c = &quot;Annually&quot;,UnitPrice/ 1, 
IF (Invoice_Frequency__c = &quot;Quarterly&quot;,UnitPrice/ 4,
IF (Invoice_Frequency__c = &quot;1 Time&quot;,UnitPrice/ 1,0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Invoices__c</fullName>
        <description>Auto-populated from Oppty</description>
        <formula>Opportunity.Total_Invoices__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-populated from Oppty</inlineHelpText>
        <label>Total # Invoices</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODAGeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Product GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Opportunity Line Items</relationshipLabel>
        <relationshipName>OpportunityLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>